@startuml
'https://plantuml.com/class-diagram

class Game

interface EnemyFactory {
    + create():AbstractAircraft
}

abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    # kind:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp):void
    + decreaseHp(int decrease):void
    + getHp():int
    + {abstract} shoot():List<BaseBullet>
}

Game ..> EnemyFactory
Game ..> AbstractAircraft

EnemyFactory <.. EliteFactory
EnemyFactory <.. MobFactory
EnemyFactory <.. BossFactory
EliteFactory ..> EliteEnemy:create
MobFactory ..> MobEnemy:create
BossFactory ..> BossEnemy:create


AbstractAircraft <|-- MobEnemy
AbstractAircraft <|-- EliteEnemy
AbstractAircraft <|-- BossEnemy

class EliteFactory {
    + create():EliteEnemy
}

class MobFactory {
    + create():MobEnemy
}

class BossFactory {
    + create():BossEnemy
}

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp):void
    + forward():void
    + kind():int
    + shoot():List<BaseBullet>
}

class EliteEnemy {
    - shootNum:int
    - power:int
    - direction:int
    - kind:int
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp):void
    + forward():void
    + shoot():List<BaseBullet>
    + addProp():List<AbstractProp>
}

class BossEnemy {
    - shootNum:int
    - power:int
    - direction:int
    - kind:int
    + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp):void
    + forward():void
    + enemyKind():int
    + shoot():List<Bullet>
}


@enduml